name: thesis
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: build/LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Import
        DocImport
        Thesis
        Thesis.Build
        Thesis.Constants
        Thesis.Document
        Thesis.OptParse
        Thesis.OptParse.Types
        Thesis.SendDraft
        Thesis.ShakeBuild
        Thesis.Types
        Thesis.Utils
        Thesis.Zift
        Thesis.Document.Abstract
        Thesis.Document.Assets
        Thesis.Document.Bibliography
        Thesis.Document.Conclusion
        Thesis.Document.DocTechDetails
        Thesis.Document.EntireDocument
        Thesis.Document.Introduction
        Thesis.Document.Main
        Thesis.Document.References
        Thesis.Document.TitlePage
        Thesis.Document.Types
    build-depends:
        base >=4.9 && <=5,
        HaTeX >=3.17 && <3.18,
        bytestring >=0.10 && <0.11,
        directory >=1.3 && <1.4,
        exceptions -any,
        file-embed >=0.0.10 && <0.1,
        filepath >=1.4 && <1.5,
        gitrev >=1.2 && <1.4,
        haspell -any,
        hostname >=1.0 && <1.1,
        lambdatex >=0.2 && <0.3,
        mime-mail >=0.4 && <0.5,
        mtl >=2.2 && <2.3,
        optparse-applicative -any,
        path -any,
        path-io -any,
        shake -any,
        shake-path -any,
        template-haskell >=2.11 && <2.12,
        text >=1.2 && <1.3,
        time >=1.6 && <1.7,
        zifter -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: build/src/ document/
    ghc-options: -Wall

executable thesis
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        thesis -any
    default-language: Haskell2010
    hs-source-dirs: build/app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite thesis-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        thesis -any,
        hspec -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: build/test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
