name: thesis
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: CsSyd
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Import
        Thesis
        Thesis.Constants
        Thesis.DetailedProposal
        Thesis.LaTeX
        Thesis.OptParse
        Thesis.OptParse.Types
        Thesis.Proposal
        Thesis.ShakeBuild
        Thesis.Types
        Thesis.Utils
        Thesis.Zift
    build-depends:
        base >=4.9 && <=5,
        optparse-applicative -any,
        shake -any,
        zifter -any,
        path -any,
        path-io -any,
        exceptions -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src/
    ghc-options: -Wall

executable thesis
    main-is: Main.hs
    build-depends:
        base >=4.9 && <=5,
        thesis -any
    default-language: Haskell2010
    hs-source-dirs: app/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite thesis-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        thesis -any,
        hspec -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
